# rustpycoils

./: .travis.yml  Cargo.toml  README.md  setup.py
.github/workflows/: build-sdist.sh  build-wheels.yml
benchmark/: magpy_comparison.ipynb
ci/: install_rust.sh
src/: lib.rs
