[package]
name = "rustycoils_py"
version = "0.1.0"
authors = ["jdrtommey <jake.tommey@gmail.com>"]
edition = "2018"

[lib]
name = "rustycoils_py"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustycoils ={git ="https://github.com/jdrtommey/rustycoils",branch="main"}

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
