[package]
name = "rustpycoils"
version = "0.1.0"
authors = ["jdrtommey <jake.tommey@gmail.com>"]
edition = "2018"

[lib]
name = "rustpycoils"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustycoils ={git ="https://github.com/jdrtommey/rustycoils",features=["parallel"],branch="dev"}
numpy = "0.13.2"
[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
